feat: add google analytics

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <title>Ridham Parmar</title>
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZC757T46H9"></script>
 <body>
     <div id="wrapper">
        
